--- a/lesson3/src/templates/head.tmpl
+++ b/lesson3/src/templates/head.tmpl
@@ -29,6 +29,11 @@
             max-width: 900px;
             margin: 0 auto;
         }
+        #showMore {
+            display: block;
+            width: 150px;
+            margin: 0 auto;
+        }
 
     </style>
 </head>
